--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,57 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
+
+* {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0;
+  font-family: 'Inter', sans-serif;
+  background: #282D35;
+  /*background-image: url('../assets/react-icon-large.png');*/
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+}
+
+.logo > img {
+  width: 35px;
+  padding-right: 10px;
+}
+
+h3 {
+  color: #61dafb;
+  font-weight: 700;
+  font-size: 22px;
+}
+
+h4 {
+  color: #deebf8;
+  font-weight: 600;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #21222a;
+  height: 90px;
+  padding: 30px 25px;
+}
+
+.fun-facts {
+  color: #fff;
+}
+
+.facts > li {
+  color: #fff;
+  font-size: 16px;
+  padding-block: 10px;
+}
+
+.facts > li::marker {
+  font-size: 1.4rem;
+  color: #61dafb;
 }
