--- a/src/index.css
+++ b/src/index.css
@@ -4,54 +4,148 @@
   box-sizing: border-box;
 }
 
-body {
+h1, h2, h3, h4, h5, h6, p {
   margin: 0;
-  font-family: 'Inter', sans-serif;
-  background: #282D35;
-  /*background-image: url('../assets/react-icon-large.png');*/
 }
 
-.logo {
+body {
+  margin: 0;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+/* NAV styles */
+
+nav {
+  display: flex;
+  align-items: center;
+  background-color: #ffffff;
+  padding: 30px 25px;
+  height: 60px;
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
+  z-index: 1;
+}
+
+nav.dark {
+  background-color: #21222A;
+}
+
+.nav-logo-icon {
+  width: 30px;
+  margin-right: 10px;
+}
+
+.nav-logo-text {
+  font-size: 1.5rem;
+  color: #61DAFB;
+  margin-right: auto;
+}
+
+.nav-title {
+  color: #DEEBF8;
+}
+
+.toggler {
   display: flex;
   align-items: center;
 }
 
-.logo > img {
-  width: 35px;
-  padding-right: 10px;
-}
-
-h3 {
-  color: #61dafb;
-  font-weight: 700;
-  font-size: 22px;
-}
-
-h4 {
-  color: #deebf8;
+.toggler p {
+  font-size: 1rem;
   font-weight: 600;
 }
 
-.nav {
+.toggler-slider {
+  width: 28px;
+  height: 15px;
+  background-color: #2B283A;
+  border-radius: 2rem;
+  margin-inline: 7px;
+  cursor: pointer;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
-  background: #21222a;
-  height: 90px;
-  padding: 30px 25px;
+  border: 1px solid black;
+  box-sizing: content-box;
 }
 
-.fun-facts {
-  color: #fff;
+nav.dark .toggler-slider {
+  border-color: white;
+  background-color: #F5F5F5;
 }
 
-.facts > li {
-  color: #fff;
-  font-size: 16px;
+.toggler-slider-circle {
+  height: 15px;
+  width: 15px;
+  background-color: white;
+  border-radius: 50%;
+}
+
+nav.dark .toggler-slider-circle {
+  background-color: black;
+}
+
+.toggler-light {
+  color: #2B283A;
+}
+
+nav.dark .toggler-light {
+  color: #918E9B;
+}
+
+.toggler-dark {
+  color: #D5D4D8;
+}
+
+nav.dark .toggler-dark {
+  color: #FFFFFF;
+}
+
+nav.dark .toggler-slider {
+  justify-content: flex-end;
+}
+
+/* MAIN styles */
+main {
+  padding: 57px 27px;
+  /*background-image: url("http://localhost:3000/react-icon-light.png");*/
+  background-image: url("./assets/react-icon-light.png");
+  background-repeat: no-repeat;
+  background-position: right center;
+  flex: 1 1 auto;
+  background-color: white;
+  color: #2B283A;
+}
+
+main.dark {
+  /*background-image: url("http://localhost:3000/react-icon-dark.png");*/
+  background-image: url("./assets/react-icon-dark.png");
+  background-color: #282D35;
+  color: white;    
+}
+
+.main-title {
+  margin: 0;
+  font-size: 39px;
+  letter-spacing: -0.05em;
+}
+
+.main-facts {
+  margin-top: 46px;
+  max-width: 400px;
+}
+
+.main-facts > li {
+  line-height: 19px;
   padding-block: 10px;
 }
 
-.facts > li::marker {
+.main-facts > li::marker {
   font-size: 1.4rem;
-  color: #61dafb;
+  color: #61DAFB;
 }
+
